--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+<div>
 <h1>Personal Information</h1>
 <h2>About me:</h2>
 <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
@@ -13,13 +14,16 @@
 <p>got into a new hobby called ‘astrophotography’ and I enjoy spending my nights outside star gazing. I also enjoy gaming especially with friends whether its competitive or just for fun. I am easily approachable and would be open to communication if you are nice and polite.</p>
 <p>also enjoy gaming especially with friends whether its competitive or just for fun. I am easily approachable and would be open to communication if you are nice and polite.</p>
 <p>approachable and would be open to communication if you are nice and polite.</p>
-<div> <div>
+</div>
+
+<div>
   <h2>INTEREST IN IT:</h2>
 <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
 <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
 <p>learning about the parts needed to power a computer including the advanced programming and </p>
 <p>rendering needed to get games running. I have helped many inexperienced friends with their </p>
 <p>computer issues and have had a vast array of success with these challenges. </p>
+</div>
 
 </body>
 </html>
