--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@ body {font-family: Arial;}
 </div>
 
 <div id="Interestinit" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p>
+  <h3>My Interest In IT</h3>
+  <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
+  <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
+  <p>learning about the parts needed to power a computer including the advanced programming and </p>
+  <p>rendering needed to get games running. I have helped many inexperienced friends with their </p>
+  <p>computer issues and have had a vast array of success with these challenges. </p>
 </div>
 
 <div id="Idealjob" class="tabcontent">
