--- a/index.html
+++ b/index.html
@@ -79,8 +79,14 @@ body {font-family: Arial;}
 </div>
 
 <div id="Idealjob" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+  <h3>Ideal Job</h3>
+  <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
+  <p>for my ideal job can include the following job advertisement:</p>
+  <h2>Job title: Cloud Operations Engineer</h2>
+  <p></p>
+  <p></p>
+  <p></p>
+
 </div>
 
 <script>
