--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function openSection(evt, sectionName) {
   for (i = 0; i < tablinks.length; i++) {
     tablinks[i].className = tablinks[i].className.replace(" active", "");
   }
-  document.getElementById(cityName).style.display = "block";
+  document.getElementById(sectionName).style.display = "block";
   evt.currentTarget.className += " active";
 }
 </script>
