--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {font-family: Arial;}
 </head>
 <body>
 
-<h2>Tabs</h2>
-<p>Click on the buttons inside the tabbed menu:</p>
+<h2>My Profile</h2>
+<p>Menu-</p>
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
