--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ body {font-family: Arial;}
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
   <p>Australia. I am fluent in English and can understand some of my cultures language, Tamil. I recently </p>
-  <p>got into a new hobby called ‘astrophotography’ and I enjoy spending my nights outside star gazing. I also enjoy gaming especially with friends whether its competitive or just for fun. I am easily approachable and would be open to communication if you are nice and polite.</p>
-  <p>also enjoy gaming especially with friends whether its competitive or just for fun. I am easily approachable and would be open to communication if you are nice and polite.</p>
+  <p>got into a new hobby called ‘astrophotography’ and I enjoy spending my nights outside star gazing. I</p>
+  <p>also enjoy gaming especially with friends whether its competitive or just for fun. I am</p>
   <p>approachable and would be open to communication if you are nice and polite.</p>
 </div>
 
