--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ body {font-family: Arial;}
 </style>
 </head>
 <body>
+  
+  <style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
 
 <h2>My Profile</h2>
 <p>Menu-</p>
@@ -59,7 +65,7 @@ body {font-family: Arial;}
   <button class="tablinks" onclick="openSection(event, 'Idealjob')">Ideal Job</button>
 </div>
 
-<div id="Personalinfo" class="tabcontent" class="centeralign">
+<div id="Personalinfo" class="tabcontent">
   <h3>About me:</h3>
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
@@ -69,7 +75,7 @@ body {font-family: Arial;}
   <p>approachable and would be open to communication if you are nice and polite.</p>
 </div>
 
-<div id="Interestinit" class="tabcontent" class="centeralign">
+<div id="Interestinit" class="tabcontent">
   <h3>My Interest In IT</h3>
   <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
   <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
@@ -78,7 +84,7 @@ body {font-family: Arial;}
   <p>computer issues and have had a vast array of success with these challenges. </p>
 </div>
 
-<div id="Idealjob" class="tabcontent" class="centeralign">
+<div id="Idealjob" class="tabcontent" >
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
