--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@ body {font-family: Arial;}
 </style>
 </head>
 <body>
-  
+
   <style>
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
+button {text-align: center;}
 </style>
 
 <h2>My Profile</h2>
