--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ div {text-align: center;}
 button {text-align: center;}
 </style>
 
+<div>
 <h2>My Profile</h2>
 <p>Menu-</p>
+</div>
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
