--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ body {font-family: Arial;}
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #667e8c;
+  background-color: #50c7a7;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #45555e;
+  background-color: #7bb3a4;
 }
 
 /* Style the tab content */
