--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button {text-align: center;}
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
-  <button class="tablinks" onclick="openSection(event, 'Interestinit')">Interest In IT</button>
+  <button class="tablinks" onclick="openSection(event, 'Interestinit')">Project Idea</button>
   <button class="tablinks" onclick="openSection(event, 'Idealjob')">Ideal Job</button>
 </div>
 
@@ -96,6 +96,56 @@ button {text-align: center;}
   <p></p>
 
 </div>
+
+<div>
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+</style>
+</head>
+<body>
+
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</div>
+
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
 
 <script>
 function openSection(evt, sectionName) {
