--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ button {text-align: center;}
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
-  <button class="tablinks" onclick="openSection(event, 'Interestinit')">Project Idea</button>
-  <button class="tablinks" onclick="openSection(event, 'Idealjob')">Ideal Job</button>
+  <button class="tablinks" onclick="openSection(event, 'PersonalProf')">Personal Profile</button>
+  <button class="tablinks" onclick="openSection(event, 'Projidea')">Project Idea</button>
 </div>
 
 <div id="Personalinfo" class="tabcontent">
@@ -77,7 +77,7 @@ button {text-align: center;}
   <p>approachable and would be open to communication if you are nice and polite.</p>
 </div>
 
-<div id="Interestinit" class="tabcontent">
+<div id="PersonalProf" class="tabcontent">
   <h3>My Interest In IT</h3>
   <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
   <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
@@ -86,7 +86,7 @@ button {text-align: center;}
   <p>computer issues and have had a vast array of success with these challenges. </p>
 </div>
 
-<div id="Idealjob" class="tabcontent" >
+<div id="Projidea" class="tabcontent" >
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
