--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ function openSection(evt, sectionName) {
   document.getElementById(sectionName).style.display = "block";
   evt.currentTarget.className += " active";
 }
-<button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
+<button class="tablinks" onclick="openSection(event, 'Personalinfo')" id="defaultOpen">Personal Information</button>
 </script>
 
 <script>
