--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>My Profile</title>
 </head>
 <!DOCTYPE html>
+
+////tabs////
+
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,6 +51,49 @@ body {font-family: Arial;}
 }
 </style>
 </head>
+
+////back to top button////
+
+<div>
+
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+  }
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+
+  #myBtn:hover {
+    background-color: #555;
+  }
+  </style>
+  </head>}
+</div>
+<body>
+
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</div>
+
+
+////////////////////////////////HTML and some CSS////////////////////////////////
+
 <body>
 
   <style>
@@ -96,46 +142,10 @@ button {text-align: center;}
   <p></p>
 
 </div>
-
-<div>
-
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-  }
-
-  #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: red;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-
-  #myBtn:hover {
-    background-color: #555;
-  }
-  </style>
-  </head>}
-</div>
-
 </style>
 </head>
-<body>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-</div>
+////////////////////////////////JavaScript/////////////////////////////////////
 
 <script>
 //Get the button
