--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <title>My Profile</title>
 </head>
 <!DOCTYPE html>
-
-////tabs////
-
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,49 +48,6 @@ body {font-family: Arial;}
 }
 </style>
 </head>
-
-////back to top button////
-
-<div>
-
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-  }
-
-  #myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: red;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-
-  #myBtn:hover {
-    background-color: #555;
-  }
-  </style>
-  </head>}
-</div>
-<body>
-
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-</div>
-
-
-////////////////////////////////HTML and some CSS////////////////////////////////
-
 <body>
 
   <style>
@@ -109,8 +63,8 @@ button {text-align: center;}
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
-  <button class="tablinks" onclick="openSection(event, 'PersonalProf')">Personal Profile</button>
-  <button class="tablinks" onclick="openSection(event, 'Projidea')">Project Idea</button>
+  <button class="tablinks" onclick="openSection(event, 'Interestinit')">Interest In IT</button>
+  <button class="tablinks" onclick="openSection(event, 'Idealjob')">Ideal Job</button>
 </div>
 
 <div id="Personalinfo" class="tabcontent">
@@ -123,7 +77,7 @@ button {text-align: center;}
   <p>approachable and would be open to communication if you are nice and polite.</p>
 </div>
 
-<div id="PersonalProf" class="tabcontent">
+<div id="Interestinit" class="tabcontent">
   <h3>My Interest In IT</h3>
   <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
   <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
@@ -132,7 +86,7 @@ button {text-align: center;}
   <p>computer issues and have had a vast array of success with these challenges. </p>
 </div>
 
-<div id="Projidea" class="tabcontent" >
+<div id="Idealjob" class="tabcontent" >
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
@@ -142,32 +96,6 @@ button {text-align: center;}
   <p></p>
 
 </div>
-</style>
-</head>
-
-////////////////////////////////JavaScript/////////////////////////////////////
-
-<script>
-//Get the button
-var mybutton = document.getElementById("myBtn");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
 
 <script>
 function openSection(evt, sectionName) {
@@ -183,12 +111,6 @@ function openSection(evt, sectionName) {
   document.getElementById(sectionName).style.display = "block";
   evt.currentTarget.className += " active";
 }
-<button class="tablinks" onclick="openSection(event, 'Personalinfo')" id="defaultOpen">Personal Information</button>
-</script>
-
-<script>
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
 </script>
 
 </body>
