--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {font-family: Arial;}
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: #4d4d4d;
 }
 
 /* Style the buttons inside the tab */
