--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ body {font-family: Arial;}
 }
 </style>
 </head>
+<style>
+body {
+  background-color: grey;
+}
+</style>
+
 <body>
 
   <style>
@@ -62,12 +68,12 @@ button {text-align: center;}
 </div>
 
 <div class="tab">
-  <button class="tablinks" onclick="openSection(event, 'Personalinfo')">Personal Information</button>
-  <button class="tablinks" onclick="openSection(event, 'Interestinit')">Interest In IT</button>
-  <button class="tablinks" onclick="openSection(event, 'Idealjob')">Ideal Job</button>
+  <button class="tablinks" onclick="openSection(event, 'persinfo')" >Personal Information</button>
+  <button class="tablinks" onclick="openSection(event, 'persprof')">Personal Profile</button>
+  <button class="tablinks" onclick="openSection(event, 'projidea')">Project Idea</button>
 </div>
 
-<div id="Personalinfo" class="tabcontent">
+<div id="persinfo" class="tabcontent">
   <h3>About me:</h3>
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
@@ -75,27 +81,30 @@ button {text-align: center;}
   <p>got into a new hobby called ‘astrophotography’ and I enjoy spending my nights outside star gazing. I</p>
   <p>also enjoy gaming especially with friends whether its competitive or just for fun. I am</p>
   <p>approachable and would be open to communication if you are nice and polite.</p>
-</div>
-
-<div id="Interestinit" class="tabcontent">
   <h3>My Interest In IT</h3>
   <p>My interest in IT is in the networking field although I enjoy other areas of IT such as programming. </p>
   <p>My interest in IT started when I entered secondary, my love for computers came with gaming and </p>
   <p>learning about the parts needed to power a computer including the advanced programming and </p>
   <p>rendering needed to get games running. I have helped many inexperienced friends with their </p>
   <p>computer issues and have had a vast array of success with these challenges. </p>
-</div>
-
-<div id="Idealjob" class="tabcontent" >
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
   <h4>Job title: Cloud Operations Engineer</h4>
+</div>
+
+<div id="persprof" class="tabcontent">
+
+</div>
+
+<div id="projidea" class="tabcontent" >
+
   <p></p>
   <p></p>
   <p></p>
 
 </div>
+
 
 <script>
 function openSection(evt, sectionName) {
