--- a/index.html
+++ b/index.html
@@ -3,37 +3,30 @@
 <head>
 <title>Naveed Naleem - ePortfolio</title>
 
-<meta name="viewport" content="width=device-width"/>
-<meta name="description" content="ePortfolio for Student Name."/>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="ePortfolio for Naveed Naleem."/>
+<meta name="author" content="Naveed Naleem">
+
 
 <link type="text/css" rel="stylesheet" href="style.css">
 <script src="myscripts.js"></script>
-
 </head>
-<!DOCTYPE html>
-<html>
-<head>
-<script src="myscripts.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body {font-family: Arial;}
-</style>
-</head>
-<style>
+
 body {
   background-color: grey;
 }
-</style>
-
-<body>
-
-  <style>
+body
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
 button {text-align: center;}
 </style>
+
+<body>
 
 <div>
 <h2>Naveed Naleem - ePortfolio</h2>
