--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@ button {text-align: center;}
   <p>Experience in customer driven environments.</p>
   <p>Experience in supporting SaaS based platforms.</p>
   <p>Experience in migrating customers to the cloud (AWS only).</p>
+  <h3>The skills I currently have:</h3>
+  <p>Strong general computer skills.</p>
+  <p>Cooperation skills</p>
+  <p>Communication skills</p>
+  <p>Work experience in the IT field</p>
+  <p>Basic programming skills</p>
+  <p>Fast learner</p>
+  <p></p>
+  <p></p>
 </div>
 
 <div id="persprof" class="tabcontent">
