--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@ button {text-align: center;}
   <p>Work experience in the IT field</p>
   <p>Basic programming skills</p>
   <p>Fast learner</p>
-  <p></p>
-  <p></p>
+  <h3>My plan to acheive the skills necessary for my ideal job:</h3>
+  <p>My plan to achieve the skills I need for my ideal job would be to gain experience in the IT field as I </p>
+  <p>study. I would apply for contract jobs and work for little time at many different places which would </p>
+  <p>allow me to slowly build up my resume and experience list. Then by the time I have finished my </p>
+  <p>course, which is the Bachelor of Information Technology, I would have had a lot of reasonable </p>
+  <p>experience in the IT field and would make it easy for me to find a job. Then I would slowly find better </p>
+  <p>jobs and increase my ranking all the way up to my ideal job which would be any of the fields </p>
+  <p>including networking, cloud computing or cyber security. I would also have multiple investments in </p>
+  <p>crypto-currency and stocks to earn money on the side, which can help support my future family and </p>
+  <p>allow me to have a source of income in the long term. </p>
 </div>
 
 <div id="persprof" class="tabcontent">
