--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ button {text-align: center;}
 <body>
 
 <div>
-<h2>Naveed Naleem - ePortfolio</h2>
+<h1>Naveed Naleem - ePortfolio</h1>
 </div>
 
 <div class="tab">
@@ -40,7 +40,7 @@ button {text-align: center;}
 </div>
 
 <div id="persinfo" class="tabcontent">
-  <h3>About me:</h3>
+  <h2>About me</h2>
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
   <p>Australia. I am fluent in English and can understand some of my cultures language, Tamil. I recently </p>
@@ -65,6 +65,7 @@ button {text-align: center;}
 </div>
 
 <div id="skills" class="tabcontent">
+  <h2>My ideal job<h2>
 <h3>The skills required for my ideal job:</h3>
   <p>Prior experience in a Cloud Operations engineering role as a technical specialist.</p>
   <p>Strong skills in Linux, Networking, Scripting and Web Application Servers.</p>
@@ -92,12 +93,28 @@ button {text-align: center;}
 </div>
 
 <div id="persprof" class="tabcontent">
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
+  <h2>Personal Profile</h2>
+  <h4>What do the test results mean for me?</h4>
+  <p>To me the Myers-Briggs test results are a vague indication to my true personality and that my </p>
+  <p>personality is different in many ways such as the fact that I am truly not heartless, and I do care for </p>
+  <p>people other than the ones closer to me. The learning styles test however shows that I am a visual </p>
+  <p>learner which maybe correct as I learn better through tutorials which demonstrate a procedure. </p>
+  <p>Although I can also learn well through figuring things out myself by simply experimenting. The big </p>
+  <p>five personality test maybe correct in a way as I am less of an extrovert, but I do have high logical </p>
+  <p>thinking and would rather use my logic to perform actions that simply going by my ‘heart’. Overall, </p>
+  <p>these tests do not represent a true identification of myself, but they can give a very vague and short </p>
+  <p>view of who I am.</p>
+  <h4>How may these results influence my behaviour in a team?</h4>
+  <p>These results will not change how I behave but they do indicate how I behave. When in a team I </p>
+  <p>would contribute when I need to and would contribute so that the team succeeds, however I would </p>
+  <p>not vote myself for a leading position as this is not one of my attributes or skills. Being in a team </p>
+  <p>according to the test results would result in me contributing but not taking up leader roles and this </p>
+  <p>gives an accurate representation to how I would behave truly.</p>
+  <h4>How should you take this into account when forming a team?</h4>
+  <p>I would take this into account and form a team which already has a team leader and would help </p>
+  <p>assist that team in its contributions but depend on another team member to coordinate the team. </p>
+  <p>Although I would be open to contributions and feedback on my contributions and would like to </p>
+  <p>improve to be a better teammate and help the team in succeeding.</p>
 </div>
 
 <div id="projidea" class="tabcontent" >
