images and html edits

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ button {text-align: center;}
   <button class="tablinks" onclick="openSection(event, 'projidea')">Project Idea</button>
 </div>
 
-<div id="persinfo" class="tabcontent">
-  <h2>About me</h2>
+<div id="persinfo" class="tabcontent" style="display:block">
+  <h1 style="color:#7bb3a4;">About Me</h1>
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
   <p>Australia. I am fluent in English and can understand some of my cultures language, Tamil. I recently </p>
@@ -56,6 +56,7 @@ button {text-align: center;}
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
+    <img src="pics/job ad.png" alt="job advertisement">
   <h3>Job title: Cloud Operations Engineer</h3>
   <h5>About this job:</h5>
   <p>Support and project work in cloud software. Deployment and scripting of cloud applications </p>
@@ -65,7 +66,7 @@ button {text-align: center;}
 </div>
 
 <div id="skills" class="tabcontent">
-  <h2>My ideal job<h2>
+  <h1 style="color:#7bb3a4;">My ideal job<h1>
 <h3>The skills required for my ideal job:</h3>
   <p>Prior experience in a Cloud Operations engineering role as a technical specialist.</p>
   <p>Strong skills in Linux, Networking, Scripting and Web Application Servers.</p>
@@ -93,7 +94,7 @@ button {text-align: center;}
 </div>
 
 <div id="persprof" class="tabcontent">
-  <h2>Personal Profile</h2>
+  <h1 style="color:#7bb3a4;">Personal Profile</h1>
   <h4>What do the test results mean for me?</h4>
   <p>To me the Myers-Briggs test results are a vague indication to my true personality and that my </p>
   <p>personality is different in many ways such as the fact that I am truly not heartless, and I do care for </p>
