fade and default tabs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ button {text-align: center;}
 </div>
 
 <div class="tab">
-  <button class="tablinks" onclick="openSection(event, 'persinfo')" >Personal Information</button>
+  <button class="tablinks active" onclick="openSection(event, 'persinfo')" >Personal Information</button>
   <button class="tablinks" onclick="openSection(event, 'skills')" >My skills and experience</button>
   <button class="tablinks" onclick="openSection(event, 'persprof')">Personal Profile</button>
   <button class="tablinks" onclick="openSection(event, 'projidea')">Project Idea</button>
@@ -119,6 +119,12 @@ button {text-align: center;}
 </div>
 
 <div id="projidea" class="tabcontent" >
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
   <p></p>
   <p></p>
   <p></p>
