--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ button {text-align: center;}
   <p>Experience in supporting SaaS based platforms.</p>
   <p>Experience in migrating customers to the cloud (AWS only).</p>
   <h3>The skills I currently have:</h3>
-  <p>Strong general computer skills.</p>
+  <img src="pics/skills.png" alt="skills" style="float:right;width:250px;height:200px;">
+  <p>Strong general computer skills.style="padding: 1px 1px"</p>
   <p>Cooperation skills</p>
   <p>Communication skills</p>
   <p>Work experience in the IT field</p>
@@ -119,18 +120,75 @@ button {text-align: center;}
 </div>
 
 <div id="projidea" class="tabcontent" >
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
+<h1 style="color:#7bb3a4;">Project idea</h1>
+  <p>My project idea is to create an app that can take and convert pictures into PDF files and sort them </p>
+  <p>according to their subject. This would be useful to use when needing to keep records of receipts or </p>
+  <p>invoices. This app is important and useful for everyday people and would help make people’s lives </p>
+  <p>easier and provide efficient recording of their data. During the development of this app, I would </p>
+  <p>encounter some issues such as the conversion of different types of image files into a PDF for </p>
+  <p>example some users may be using RAW image files and this is unusual but not impossible so I would </p>
+  <p>have to find a way to convert that RAW image to a PDF file. </p>
+  <h4>Overview</h4>
+  <p>The app would be a simple design and have easily accessible buttons and functions. It would take or </p>
+  <p>obtain pictures using the gallery of already taken pictures or using the inbuilt camera to take a new </p>
+  <p>picture. After this process it would convert the image into a PDF file format and store this file in a </p>
+  <p>location of the user’s choice. The user can also set a folder to organise the PDF files automatically </p>
+  <p>according to their type chosen by the user, an example of a type of can be ‘electronics’ or ‘groceries’. </p>
+  <p>The app would also be able to set reminders for warranties for each separate PDF created and the </p>
+  <p>app would be able to open the PDF files as well. </p>
+  <h4>Motivation</h4>
+  <p>An app that can organise receipts by converting them into readable file formats and sorting them </p>
+  <p>according to their category/contents would be very convenient to the average consumer. According </p>
+  <p>to goodfirms.co, productivity ranks first among most used app store categories. Which shows that </p>
+  <p>people now days are into making their lives simple and easy by using apps for their daily tasks. My </p>
+  <p>project idea would add to that category and help make people’s lives easier in the sense of </p>
+  <p>organising and storing important data about their purchases. Creating an app would be convenient </p>
+  <p>for people as opposed to creating a product as the app is available in just a few clicks from their </p>
+  <p>personal smart device.</p>
+  <h4>Description</h4>
+  <p>The app would take the input data of a picture file which can be taken via the app or through the in-built</p>
+  <p>gallery app on the smart phone device. The app would then ask permission of the user to allow </p>
+  <p>access to storage, if the user accepted the app would proceed to process the image. The app then </p>
+  <p>confirms whether the user would like to convert the picture file into a PDF. If the user accepts then </p>
+  <p>the picture file would be converted into a PDF file format through a conversion process. After the </p>
+  <p>conversion, the PDF is stored in a new folder created in the users’ storage. The app then allows the </p>
+  <p>user to view the PDF and manage it. The app can allow the user to organise the PDF files and the </p>
+  <p>user can set parameters in which the app will automatically recognise and organise the PDF files into </p>
+  <p>their allocated folders. The app would include multiple customisations such as app themes and </p>
+  <p>settings. It would also allow the user to delete, copy, cut or move PDF files from folder to folder like </p>
+  <p>a regular file manager app. This app would also include the ability to back-up or restore the app data </p>
+  <p>through a generated backup file which can be read by the app. The app can also encrypt the backup </p>
+  <p>file where the user is given a key upon generation of the backup to allow the app to decrypt the </p>
+  <p>backup file for use on the app upon restoration. Another security feature that the app would include </p>
+  <p>is biometric app locking, depending on the smartphone, the app can be locked either by biometrics, </p>
+  <p>a simple passcode or not have a lock at all. This would allow the users to store their important data </p>
+  <p>without it being compromised by malicious apps or files and be protected from deliberate threats. </p>
+  <p>Overall, this app would function to help the daily tasks that people encounter and would make their </p>
+  <p>lives much more efficient and effective.</p>
+  <h4>Tools and technologies:</h4>
+  <p>The requirements needed to create this app would include a programming language which can be </p>
+  <p>used to create mobile apps. This can be java, C++, C#, PHP, or python which can all program mobile </p>
+  <p>applications. The programming language would be used to create the app which would run on </p>
+  <p>android and apple devices. This would mean creating 2 different apps one that is built for the apple </p>
+  <p>OS and one for the android OS. Adobe Photoshop can be used for the app design and layout which </p>
+  <p>can influence the usability and ease of use of the application. Android studio is an open-source tool </p>
+  <p>that can be used to emulate the app and test out its features while providing support to the many </p>
+  <p>versions and models of devices.</p>
+  <h4>Skills required:</h4>
+  <p>The main skills needed are programming skills and specifically programming for mobile applications. </p>
+  <p>Other skills include app design where the app must be made to conveniently allow users to navigate </p>
+  <p>and use the app. Further skills required are communication skills to allow the collection of user </p>
+  <p>feedback and implement changes to satisfy the user and their needs. Another skill required would </p>
+  <p>include having some hardware knowledge which can help as knowing what each piece of hardware </p>
+  <p>does can assist in programming software to utilize them. These skills are feasible and would be fairly </p>
+  <p>easy to obtain, making the app a realistic innovation.</p>
+  <h4>Outcome:</h4>
+  <p>If the project is successful it would provide users with an app that increases their daily efficiency and </p>
+  <p>effectiveness in tasks. It would allow users to store and manage receipts semi-automatically. The </p>
+  <p>problem of having to take time to organise and scan the receipts a person obtains throughout their </p>
+  <p>week has been solved with this app as the process can be done faster and easier. This development </p>
+  <p>would fill in the gap in the market with an app that solves a problem that is faced by people almost </p>
+  <p>daily.</p>
 </div>
 
 
