--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@ button {text-align: center;}
   <p>Experience in supporting SaaS based platforms.</p>
   <p>Experience in migrating customers to the cloud (AWS only).</p>
   <h3>The skills I currently have:</h3>
-  <img src="pics/skills.png" alt="skills" style="float:right;width:250px;height:200px;">
-  <p>Strong general computer skills.style="padding: 1px 1px"</p>
+  <p>Strong general computer skills.</p>
   <p>Cooperation skills</p>
   <p>Communication skills</p>
   <p>Work experience in the IT field</p>
   <p>Basic programming skills</p>
   <p>Fast learner</p>
+  <img src="pics/skills.png" alt="skills" style= "width:250px;height:200px;">
   <h3>My plan to acheive the skills necessary for my ideal job:</h3>
   <p>My plan to achieve the skills I need for my ideal job would be to gain experience in the IT field as I </p>
   <p>study. I would apply for contract jobs and work for little time at many different places which would </p>
@@ -96,6 +96,9 @@ button {text-align: center;}
 
 <div id="persprof" class="tabcontent">
   <h1 style="color:#7bb3a4;">Personal Profile</h1>
+  <img src="pics/myerbriggs.png" alt="Myer Briggs Test" style= "width:400px;height:500px;">
+  <img src="pics/learning style.png" alt="Learning Styles" style= "width:600px;height:400px;">
+  <img src="pics/big 5 test.png" alt="Big 5 personality test" style= "width:400px;height:200px;">
   <h4>What do the test results mean for me?</h4>
   <p>To me the Myers-Briggs test results are a vague indication to my true personality and that my </p>
   <p>personality is different in many ways such as the fact that I am truly not heartless, and I do care for </p>
@@ -106,6 +109,7 @@ button {text-align: center;}
   <p>thinking and would rather use my logic to perform actions that simply going by my ‘heart’. Overall, </p>
   <p>these tests do not represent a true identification of myself, but they can give a very vague and short </p>
   <p>view of who I am.</p>
+  <img src="pics/magman.png" alt="Magnifier man" style= "width:500px;height:200px;">
   <h4>How may these results influence my behaviour in a team?</h4>
   <p>These results will not change how I behave but they do indicate how I behave. When in a team I </p>
   <p>would contribute when I need to and would contribute so that the team succeeds, however I would </p>
@@ -121,6 +125,7 @@ button {text-align: center;}
 
 <div id="projidea" class="tabcontent" >
 <h1 style="color:#7bb3a4;">Project idea</h1>
+<img src="pics/lightbulb.png" alt="Lightbulb" style= "width:100px;height:100px;">
   <p>My project idea is to create an app that can take and convert pictures into PDF files and sort them </p>
   <p>according to their subject. This would be useful to use when needing to keep records of receipts or </p>
   <p>invoices. This app is important and useful for everyday people and would help make people’s lives </p>
