--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <link type="text/css" rel="stylesheet" href="style.css">
 <script src="myscripts.js"></script>
 </head>
+<style>
+h1 {text-align: center;}
+h5 {text-align: right;}
+</style>
+<div>
+<h1>Naveed Naleem - ePortfolio</h1><h5>#: s3899864 </h5>
+<h5>e: s3899864@student.rmit.edu.au </h5>
+<h5>w: https://nxv11.github.io/s3899864/ </h5>
+</div>
 
 <style>
 body {font-family: Arial;}
@@ -27,10 +36,6 @@ button {text-align: center;}
 </style>
 
 <body>
-
-<div>
-<h1>Naveed Naleem - ePortfolio</h1>
-</div>
 
 <div class="tab">
   <button class="tablinks active" onclick="openSection(event, 'persinfo')" >Personal Information</button>
