--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ button {text-align: center;}
   <h1 style="color:#7bb3a4;">About Me</h1>
   <p>My name is Naveed, I am currently studying first year in the Bachelor Of Information</p>
   <p>Technology. My nationality is Sri Lankan and so is my culture, although I was born and raised in </p>
-  <p>Australia. I am fluent in English and can understand some of my cultures language, Tamil. I recently </p>
+  <p>Australia. I live with my family which consists of me, my parents and my 2 sisters who are all very close to me. </p>
+  <p>I am fluent in English and can understand some of my culture's language, Tamil. I recently</p>
   <p>got into a new hobby called ‘astrophotography’ and I enjoy spending my nights outside star gazing. I</p>
   <p>also enjoy gaming especially with friends whether its competitive or just for fun. I am</p>
   <p>approachable and would be open to communication if you are nice and polite.</p>
@@ -58,6 +59,15 @@ button {text-align: center;}
   <p>learning about the parts needed to power a computer including the advanced programming and </p>
   <p>rendering needed to get games running. I have helped many inexperienced friends with their </p>
   <p>computer issues and have had a vast array of success with these challenges. </p>
+  <p>I was exposed to computers and technology at a young age as my dad was in the IT field as well</p>
+  <p>so that allowed me to have some background ideas and influence into the IT field.</p>
+  <p>I chose to study in RMIT as it was recommended by many of my colleagues during high school and </p>
+  <p>some family members too. It has a good reputation in technology, and I wanted the best education </p>
+  <p>which is why I chose RMIT. </p>
+  <p>I expect to learn how to create websites, program some simple applications or tools, create a user- </p>
+  <p>friendly interface and be able to store and manage data in databases.</p>
+  <p></p>
+
   <h3>Ideal Job</h3>
   <p>My ideal job would be in the areas of networking, cyber security, or cloud computing. An example </p>
   <p>for my ideal job can include the following job advertisement:</p>
